correction contraste filtres

--- a/assets/style.css
+++ b/assets/style.css
@@ -100,6 +100,7 @@ body {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
    color: #fff;
+   -webkit-text-stroke: 1px black;
    background-color: #a59c50;
    border-radius: 0;
 }
